# otp-service

./: pyproject.toml
src/app/domain/common/: entity.py  exceptions.py  value_objects.py
src/app/domain/entities/: otp_entity.py
src/app/domain/repositories/: otp_repository.py
src/app/domain/value_objects/: action_uuid_value_object.py  otp_created_at_value_object.py  otp_expires_at_value_object.py  otp_value_object.py
